Bug:: Amount to be right aligned (Digits after decimal to be aligned)

--- a/trunk/fingence-portlet/docroot/css/main.css
+++ b/trunk/fingence-portlet/docroot/css/main.css
@@ -84,3 +84,15 @@
 .protfoliodropdown {
    	margin-top: 5px;
 }
+
+.table-col-purchasePrice, .table-col-currentPrice, .table-col-currentPrice, .table-col-gainLoss, .table-col-gainLossPercent,
+.table-col-market_value, .table-col-bond_holdings_percent, .table-col-total_holdings_percent, .table-col-grandTotal,
+.table-col-AT-MATURITY, .table-col-CALLABLE, .table-col-PUTABLE, .table-col-SINKABLE,
+.table-col-0-2-Yrs, .table-col-2-4-Yrs, .table-col-4-6-Yrs, .table-col-6-8-Yrs, .table-col-8-10-Yrs, .table-col-10-15-Yrs, .table-col-15-90-Yrs,
+.table-col-purchaseQty, .table-col-amountOutstanding, .table-col-Transaction, .table-col-cashFlow, .table-col-currencyConversionRate, .table-col-cashFlowCurrency,
+.table-col-purchasedMarketValue, .table-col-last_price, .table-col-purchaseDate1, .table-col-gain_loss, .table-col-income, .table-col-total_returns, .table-col-avg_holding_period_return,
+.yui3-datatable-col-usd_invested, .yui3-datatable-col-market_value, .yui3-datatable-col-total_gain_loss, .yui3-datatable-col-gain_loss, .yui3-datatable-col-weight,
+.yui3-datatable-col-market_value_in_currency, .yui3-datatable-col-capital_gain_loss, .yui3-datatable-col-fx_gain_loss {
+	text-align: right !important;
+	white-space: nowrap !important;
+}
